# security

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/authd/: Cargo.toml  Dockerfile
apps/authd/src/: main.rs
crates/localzet-audit/: Cargo.toml
crates/localzet-audit/src/: lib.rs
crates/localzet-auth-core/: Cargo.toml
crates/localzet-auth-core/src/: lib.rs  service.rs  token.rs
crates/localzet-config/: Cargo.toml
crates/localzet-config/src/: lib.rs
crates/localzet-crypto/: Cargo.toml
crates/localzet-crypto/src/: lib.rs
crates/localzet-domain/: Cargo.toml
crates/localzet-domain/src/: audit.rs  identity.rs  lib.rs  oauth.rs  repository.rs  session.rs  tenant.rs  token.rs
crates/localzet-policy/: Cargo.toml
crates/localzet-policy/src/: lib.rs
crates/localzet-storage/: Cargo.toml
crates/localzet-storage/src/: lib.rs  postgres.rs
db/migrations/: 0001_init.sql
deploy/compose/: docker-compose.yml
deploy/keys/: dev-private.pem  dev-public.pem
docs/adr/: 0001-control-plane-split.md  0002-rust-core.md  0003-postgres-persistence.md
docs/architecture/: compliance-readiness.md  security-baseline.md  system-architecture.md  threat-model.md  vision.md
docs/operations/: development.md  incidents.md  self-hosted.md
docs/specs/: domain-model.md  mvp.md  oauth-flows.md  persistence.md  release-security.md  roadmap.md  token-issuer.md
