[package]
name = "authd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
localzet-auth-core = { path = "../../crates/localzet-auth-core" }
localzet-config = { path = "../../crates/localzet-config" }
localzet-domain = { path = "../../crates/localzet-domain" }
localzet-storage = { path = "../../crates/localzet-storage" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
