[package]
name = "localzet-auth-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
localzet-config = { path = "../localzet-config" }
localzet-crypto = { path = "../localzet-crypto" }
localzet-domain = { path = "../localzet-domain" }
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio.workspace = true
