[package]
name = "localzet-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
chrono.workspace = true
localzet-config = { path = "../localzet-config" }
localzet-domain = { path = "../localzet-domain" }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
